# thesis-hyperspectral-compression

./: README.md
Code/: .gitignore  MastersThesis  README.md  Tests.md  Tests.txt  benchmark.py  benchmark.sh  environment.yml  make_partial_splits.py  plot_latent_space.py  strings_test.txt  test.py  test_compress_attention.py  test_conv2d_1d_model.py  train_cheng_attention.py  train_cheng_main.py  train_combined_cheng_main.py  train_combined_general_hyperprior.py  train_combined_model.py  train_combined_model_inner_transformer.py  train_combined_model_with_attention.py  train_combined_model_with_hyperprior.py  train_conv1d.py  train_conv2d.py  train_conv2d_with_hyperprior.py  train_conv2d_with_pretrained_conv1d.py  train_fast_combined_general_hyperprior.py  train_fast_combined_model.py  train_fastconv1d.py  train_interpolation_baseline.py  train_scale_hyperprior.py  train_vae1d.py  train_with_pretrained_conv1d.py
Code/mat_to_squirrel/: .autorc  README.md  debug.py  justfile  pyproject.toml  writer_script.py
Code/mat_to_squirrel/.github/: CONTRIBUTING.md  config.yml
Code/mat_to_squirrel/.github/workflows/: main.yml  skip_test.yml  test.yml
Code/mat_to_squirrel/docs/: conf.py
Code/mat_to_squirrel/mat_to_squirrel/: __init__.py  dataset_helper.py  dummy.ipynb  squirrel_ext.py
Code/mat_to_squirrel/tests/: __init__.py
Thesis/: ArithmeticCoding.drawio  ArithmeticCodingBetter.drawio  CNN.drawio  DualMSELoss.drawio  GeneralArchitecture.drawio  GeneralArchitectureBigLetters.drawio  Hyperprior.drawio  Hyperprior_CM.drawio  Kickoff-Thesis.html  Main_AE_Attention.drawio  (+8 more)
(+88 files in other folders)
